--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -210,6 +210,10 @@
 
 }
 
+.prediction-main img {
+  height: 2em;
+}
+
 .prediction-secondary {
   transition: opacity 0.5s ease-in-out 0.2s;
   display: none;
