Use vmin instead of em as size

--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -1,15 +1,15 @@
-* { 
+* {
   margin: 0; 
   padding: 0; 
   box-sizing: border-box;
   background-color: rgb(250,250,250);
   font-family: 'Source Sans Pro', sans-serif !important;
-  font-weight: 100;
+  font-weight: 300;
   font-style: normal;
 }
 
 .panel {
-  margin: 1em auto;
+  margin: 4vmin auto;
   background-color: rgba(255,255,255,0);
 }
 
@@ -20,6 +20,7 @@
 .text-general {
   text-align: center;
   color: rgb(16,16,16);
+  font-size: 4vmin;
 }
 
 .line {
@@ -28,7 +29,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 3em;
+  height: 12vmin;
 }
 
 .line-hr {
@@ -37,7 +38,7 @@
 
 .line-hr-general {
   width: 100%;
-  height: 0.5em;
+  height: 2vmin;
 }
 
 .line-hide {
@@ -63,21 +64,21 @@
 }
 
 .line-tickmark {
-  width: 0.5em;
-  height: 1em;
-  margin: 0.5em auto 0 auto;
+  width: 1.5vmin;
+  height: 2.5vmin;
+  margin: 2.5vmin auto 0 auto;
 }
 
 .line-circle-general {
-  margin: 0.25em auto 0 auto;
+  margin: 1vmin auto 0 auto;
   background-color: rgb(250,250,250);
 }
 
 .line-circle-standalone {
-  border: 0.35em solid rgb(16,16,16);
+  border: 1.25vmin solid rgb(16,16,16);
   border-radius: 50%;
-  width: 2.5em;
-  height: 2.5em;
+  width: 10vmin;
+  height: 10vmin;
 }
 
 .line-circle-top {
@@ -96,6 +97,7 @@
 
 .direction {
   position: relative;
+  display: -webkit-flex;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -119,6 +121,7 @@
   margin-left: 10%;
   margin-right: auto;
   padding: 2%;
+  font-size: 5vmin;
 }
 
 .direction-left-arrow {
@@ -126,6 +129,7 @@
   margin-left: auto;
   margin-right: 10%;
   padding: 2%;
+  font-size: 5vmin;
 }
 
 .direction-right {
@@ -144,6 +148,7 @@
   margin-right: auto;
   margin-left: 10%;
   padding: 2%;
+  font-size: 5vmin;
 }
 
 .direction-right-name {
@@ -151,6 +156,7 @@
   margin-left: auto;
   margin-right: 10%;
   padding: 2%;
+  font-size: 5vmin;
 }
 
 .station {
@@ -159,21 +165,21 @@
 }
 
 .station img {
-  height: 1em;
+  height: 4vmin;
   vertical-align: -10%;
 }
 
 .station-top {
-  margin-bottom: 0.1em;
-  font-size: 2em;
+  margin-bottom: 1vmin;
+  font-size: 9vmin;
 }
 
 .station-middle {
-  font-size: 1.1em;
+  font-size: 5vmin;
 }
 
 .station-bottom {
-  font-size: 1em;
+  font-size: 4vmin;
 }
 
 .countdown {
@@ -182,7 +188,7 @@
 }
 
 .countdown-main {
-  font-size: 2em;
+  font-size: 9vmin;
   margin-bottom: 0.1em;
 }
 
@@ -205,13 +211,11 @@
 }
 
 .prediction-main {
-  font-size: 2em;
   margin-bottom: 0.1em;
-
 }
 
 .prediction-main img {
-  height: 2em;
+  height: 12vmin;
 }
 
 .prediction-secondary {
